// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/List Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <ul
      class="sc-ctaXAZ sc-bsipQr joBwOg ljFyiw sc-gInsOo hnacvy"
    >
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          You can put 
          <a
            class="sc-bXDlPE lhITcI sc-eGCarw CequI"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          Multiline text
          <div
            class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Core/List Ordered 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 jdcmMW sc-jXktwP kNOktQ"
  >
    <ol
      class="sc-ctaXAZ sc-dFJsGO joBwOg ktgAws sc-gInsOo hnacvy"
    >
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          You can put 
          <a
            class="sc-bXDlPE lhITcI sc-eGCarw CequI"
            color="primary.main"
            href="#"
          >
            a link
          </a>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          And also some 
          <code>
            code
          </code>
        </div>
      </li>
      <li>
        <div
          class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
        >
          Multiline text
          <div
            class="sc-fKFyDc jHCVxA sc-bBXqnf kYwmpI"
          >
            that breaks into multiple lines
          </div>
        </div>
      </li>
    </ol>
  </div>
</div>
`;
